contrast prob fixed 5th

--- a/home_page.css
+++ b/home_page.css
@@ -44,5 +44,6 @@ li a {
 }
 .introofmetal {
     background-color: black;
-    width: 400px;
+    width: 600px;
+    text-align: center;
 }
